# mileStone_2

./: .gitignore  AStar.h  BFS.cpp  BFS.h  BestFS.h  CHECKFORGIT.h  CMakeLists.txt  CacheManager.h  Cell.cpp  Cell.h  ClientHandler.h  CostComperator.h  DFS.cpp  DFS.h  DistanceComperator.cpp  DistanceComperator.h  FileCacheManager.cpp  FileCacheManager.h  IntCell.cpp  IntCell.h  Main.cpp  Main.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  SearchAlgorithms.cpp  SearchAlgorithms.h  SearchMatrix.cpp  SearchMatrix.h  Searchable.h  Searcher.h  Server.h  Solution.cpp  Solution.h  Solver.h  (+9 more)
